--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -12,7 +12,7 @@
       {% else %}
         <div class="site-title animated fadeIn"><a href="{{ '/' | relative_url }}">{{ site.title }}</a></div>
       {% endif %}
-      <p class="site-description animated fadeIn" itemprop="description">{{ site.description }}</p>
+      <p class="site-description animated fadeIn" itemprop="description">{{ site.description }}<br><small>This is by no means a comprehensive list, if you would like to contribute please add or edit posts on the <a href="https://github.com/jagoosw/Evidence-for-masks">GitHub</a>.</small></p>
     {% endunless %}
   </div>
 </header><!-- /.masthead -->
