--- a/_sass/so-simple/_global.scss
+++ b/_sass/so-simple/_global.scss
@@ -69,6 +69,8 @@
   @include clearfix;
   margin-bottom: 3em;
   text-align: center;
+  max-width: 768px;
+  margin: 0 auto;
 }
 
 .site-title {
@@ -88,7 +90,6 @@
   @include fluid-type($min-vw, $max-vw, $h5-min, $h5-max);
   font-weight: 400;
   font-style: italic;
-  max-width: 768px;
 }
 
 .site-logo {
